--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 # Built application files
-*.apk
-*.ap_
 
 # Files for the ART/Dalvik VM
 *.dex
@@ -15,7 +13,7 @@ out/
 
 # Gradle files
 .gradle/
-
+.build/
 
 # Local configuration file (sdk path, etc)
 local.properties
